welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: value update is not a member of Boolean
  while (vuBiscuit() = false){
         ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit() != false){
  ^